# carhelper

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  entities.md  entities.py  gen_salt.py  playground.ipynb  pyproject.toml
database/: __init__.py  collections.py  enums.py  utils.py
entities/: __init__.py  base.py  constants.py  documentation.py  entities.py  enums.py  expense.py  fuel.py  location.py  odometer.py  service.py  user.py  utils.py  vehicle.py  vendor.py
frontend/: openapi.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: generate-api.js
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: AddExpenseModal.svelte  AddFuelModal.svelte  AddOdometerModal.svelte  AddServiceModal.svelte  AddVehicleModal.svelte  AuthModal.svelte  Modal.svelte  Timeline.svelte  Toast.svelte  ToasterComponent.svelte  UploadFileModal.svelte  VehicleCard.svelte  VehicleStats.svelte
frontend/src/lib/services/: vehicle.ts
frontend/src/lib/stores/: auth.ts  toast.ts
frontend/src/lib/theme/: colors.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/garage/: +page.svelte
models/: __init__.py  auth.py  base.py  documentation.py  enums.py  expense.py  file.py  fuel.py  odometer.py  service.py  user.py  utils.py  vehicle.py  vendor.py
server/: __init__.py  app.py  config.py  enums.py  file.py  jwt.py  main.py  utils.py
server/routes/: auth.py  file.py  register.py  user.py  vehicle.py
(+2 files in other folders)
